docs: add get documentation
