# docs/swagger.json
@@ -5,6 +5,36 @@
     },
     "paths": {
         "/lead": {
+            "get": {
+                "description": "Show a specifc lead in database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Leads"
+                ],
+                "summary": "Show lead",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Lead id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ShowLeadResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new lead in database",
                 "consumes": [
@@ -102,6 +132,17 @@
             }
         },
         "handler.DeleteLeadResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/schemas.LeadRespose"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.ShowLeadResponse": {
             "type": "object",
             "properties": {
                 "data": {
